--- a/Carrusel/index.html
+++ b/Carrusel/index.html
@@ -1,23 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrusel</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <div class="ContenedorCarrusel">
-        <section class="itemCar-1">
+        <section class="itemCar uno" id="itemUno">
             <div class="ContenidoCar">
-                <h1>Hola</h1>
-            </div>  
+                <h1><B>LA DIVINA COMEDIA</B></h1>
+                <br>
+                <img src="descarga.jpg" alt="La Divina Comedia">
+                <h2>Infierno:</h2>
+                <p>
+
+                    La "Divina Comedia" de Dante Alighieri comienza con el protagonista, Dante mismo, encontrándose
+                    perdido en un oscuro bosque, que simboliza la vida en pecado y alejada de la rectitud. Pronto
+                    aparece el poeta romano Virgilio, enviado por Beatriz (el amor idealizado de Dante), para guiar a
+                    Dante a través de las profundidades del Infierno. La travesía lleva a Dante a través de nueve
+                    círculos infernales, cada uno destinado a castigar un pecado específico. En estos círculos, Dante
+                    encuentra a diversas figuras históricas y mitológicas, así como a personas que han tenido un impacto
+                    directo en su vida. El viaje culmina en el centro del Infierno, donde Satanás reside en el hielo.
+                    Dante y Virgilio emergen finalmente en el hemisferio sur, bajo el Monte Purgatorio.
+                <br>
+                    <img src="infierno.jpg" alt="">
+                </p>
+            </div>
             <div class="flechasCar">
-                <a href="#">I</a>
-                <a href="#">D</a>
+                <a href="#"></a>
+                <a href="#itemDos">SIGUIENTE</a>
+            </div>
+        </section>
+        <section class="itemCar dos" id="itemDos">
+            <div class="ContenidoCar">
+                <h2>Purgatorio:</h2>
+                <p>Tras escapar del Infierno, Dante y Virgilio inician su ascenso por el Monte Purgatorio. Aquí, las
+                    almas expían sus pecados antes de alcanzar la redención. El Purgatorio está compuesto por siete
+                    terrazas, cada una correspondiente a un pecado capital. En cada nivel, Dante interactúa con almas
+                    penitentes y aprende lecciones morales. Al llegar a la cima, Beatriz reemplaza a Virgilio como guía,
+                    llevando a Dante a través de las esferas celestiales hacia el Paraíso. Este tramo de la obra se
+                    centra en la idea de la purificación y la renovación espiritual, preparando a las almas para su
+                    ascenso final hacia la gracia divina.</p>
+                    <br>
+                    <img src="descarga (1).jpg" alt="purgatorio">
+            </div>
+            <div class="flechasCar">
+                <a href="#itemUno">ANTERIOR</a>
+                <a href="#itemTres">SIGUIENTE</a>
+            </div>
+        </section>
+        <section class="itemCar tres" id="itemTres">
+            <div class="ContenidoCar">
+                <h2>Paraíso:</h2>
+                <p>En la tercera y última parte de la "Divina Comedia", Dante asciende a través de los nueve cielos del
+                    Paraíso, representando la progresión espiritual hacia la presencia de Dios. Cada cielo alberga a
+                    almas que han alcanzado la salvación, desde personajes bíblicos hasta santos y sabios. A medida que
+                    Dante avanza, experimenta la belleza celestial y la perfección divina. Su guía, Beatriz, le
+                    proporciona conocimiento y revelaciones sobre la naturaleza de Dios y la creación. El viaje culmina
+                    en la visión directa de la Trinidad y la contemplación final de la divinidad. Dante, finalmente,
+                    alcanza la máxima comprensión y la unión con lo divino, simbolizando la redención completa y la
+                    llegada a la beatitud eterna.</p>
+                    <br>
+                    <img src="descarga (2).jpg" alt="">
+            </div>
+            <div class="flechasCar">
+                <a href="#itemDos">ANTERIOR</a>
+                <a href="#"></a>
             </div>
         </section>
     </div>
-    
+
+
 </body>
+
 </html>
