--- a/Practica 2/Pages/contacto.html
+++ b/Practica 2/Pages/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DRStyle - Contacto</title>
-    <link rel="stylesheet" href="Estilos/contacto.css">
+    <link rel="stylesheet" href="../Public/Estilos/contacto.css">
 </head>
 <body>
     
@@ -27,7 +27,7 @@
             <td><a href="productos.html" target="_blank">PRODUCTOS</a></td>
             <td><a href="carrito.html" target="_blank">CARRITO</a></td>
             <td><a href="login.html" target="_blank">REGISTRATE</a></td>
-            <td><a href="index.html" target="_blank">INICIO</a></td>
+            <td><a href="../index.html" target="_blank">INICIO</a></td>
         </tr>
     </table>
 </body>
