--- a/Practica 2/Pages/login.html
+++ b/Practica 2/Pages/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DRStyle - Login</title>
-    <link rel="stylesheet" href="Estilos/login.css">
+    <link rel="stylesheet" href="../Public/Estilos/login.css">
 </head>
 <body><header>
     <h1>REGISTRATE</h1>
@@ -30,7 +30,7 @@
         <tr>
             <td><a href="productos.html" target="_blank">PRODUCTOS</a></td>
             <td><a href="carrito.html" target="_blank">CARRITO</a></td>
-            <td><a href="index.html" target="_blank">INICIO</a></td>
+            <td><a href="../index.html" target="_blank">INICIO</a></td>
             <td><a href="contacto.html" target="_blank">CONTACTOS</a></td>
         </tr>
     </table>
