--- a/Practica 2/Pages/productos.html
+++ b/Practica 2/Pages/productos.html
@@ -10,7 +10,7 @@
     <h1>Productos</h1>
     <table>
         <tr>
-            <td><a href="index.html" target="_blank">INICIO</a></td>
+            <td><a href="../index.html" target="_blank">INICIO</a></td>
             <td><a href="carrito.html" target="_blank">CARRITO</a></td>
             <td><a href="login.html" target="_blank">REGISTRATE</a></td>
             <td><a href="contacto.html" target="_blank">CONTACTOS</a></td>
