--- a/Practica 2/index.html
+++ b/Practica 2/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DRStyle</title>
-    <link rel="icon" href="logo3.png" type="image/x-icon">
-    <link rel="stylesheet" href="Estilos/index.css">
+    <link rel="icon" href="Public/Img/logo3.png" type="image/x-icon">
+    <link rel="stylesheet" href="Public/Estilos/index.css">
 </head>
 
 <body>
@@ -49,10 +49,10 @@
     <h2>MAS DE DRStyle</h2>
     <table>
         <tr>
-            <td><a href="productos.html" target="_blank">PRODUCTOS</a></td>
-            <td><a href="carrito.html" target="_blank">CARRITO</a></td>
-            <td><a href="login.html" target="_blank">REGISTRATE</a></td>
-            <td><a href="contacto.html" target="_blank">CONTACTOS</a></td>
+            <td><a href="Pages/productos.html" target="_blank">PRODUCTOS</a></td>
+            <td><a href="Pages/contacto.html" target="_blank">CARRITO</a></td>
+            <td><a href="Pages/login.html" target="_blank">REGISTRATE</a></td>
+            <td><a href="Pages/contacto.html" target="_blank">CONTACTOS</a></td>
         </tr>
     </table>
 </section>
