--- a/Practica 2/Pages/carrito.html
+++ b/Practica 2/Pages/carrito.html
@@ -10,7 +10,7 @@
     <table>
         <tr>
             <td><a href="productos.html" target="_blank">PRODUCTOS</a></td>
-            <td><a href="index.html" target="_blank">INICIO</a></td>
+            <td><a href="../index.html" target="_blank">INICIO</a></td>
             <td><a href="login.html" target="_blank">REGISTRATE</a></td>
             <td><a href="contacto.html" target="_blank">CONTACTOS</a></td>
         </tr>
