--- a/Practica 2/index.html
+++ b/Practica 2/index.html
@@ -16,7 +16,7 @@
         <h2>"Siente la Velocidad, Viste la Elegancia"</h2>
     </header>
     <br><br>
-    <section id="descripcion">
+    <section id="desripcion">
         <p>
             Explora el apasionante universo de la Fórmula 1 con DRStyle, tu destino exclusivo para el merchandising más
             refinado y de altísima calidad. Sumérgete en la emoción de la máxima competición automovilística con nuestra
