--- a/Practica 2/Pages/carrito.html
+++ b/Practica 2/Pages/carrito.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DRStyle - Carrito</title>
+    <link rel="icon" href="../Public/Img/logo3.png" type="image/x-icon">
+    <link rel="stylesheet" href="../Public/Estilos/carrito.css">
 </head>
 <body>
     <h1>Carrito</h1>
+    <h3>Confirma tu compra</h3>
+<section id="productos">
+    <table>
+        <tr>
+            <td class="Imagen"><img src="../Public/Img/Gorra_redbull_2023.jpg" alt="Gorra RedBull 2023"></td>
+        </tr>
+        <tr>
+            <td>Gorra RedBull 2023</td>
+        </tr>
+        <tr>
+            <td class="comprar">45.00$</td>
+        </tr>
+    </table>
+    <table>
+        <tr>
+            <td class="Imagen"><img src="../Public/Img/Chaqueta_Ferrari_2023.jpg" alt="Chaqueta Ferrari 2023"></td>
+        </tr>
+        <tr>
+            <td>Chaqueta Ferrari-Santander 2023</td>
+        </tr>
+        <tr>
+            <td class="comprar">115.00$</td>
+        </tr>
+    </table>
+</section>
+<h2 class="Total">TOTAL DE SU ORDEN: 160.00$</h2>
+<h2 class="Confirmar">CONFIRMAR COMPRA</h2>    
     <table>
         <tr>
             <td><a href="productos.html" target="_blank">PRODUCTOS</a></td>
