--- a/Practica 2/Pages/contacto.html
+++ b/Practica 2/Pages/contacto.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DRStyle - Contacto</title>
     <link rel="stylesheet" href="../Public/Estilos/contacto.css">
+    <link rel="icon" href="../Public/Img/logo3.png" type="image/x-icon">
 </head>
 <body>
     
