--- a/Practica 2/Pages/login.html
+++ b/Practica 2/Pages/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DRStyle - Login</title>
     <link rel="stylesheet" href="../Public/Estilos/login.css">
+    <link rel="icon" href="../Public/Img/logo3.png" type="image/x-icon">
 </head>
 <body><header>
     <h1>REGISTRATE</h1>
@@ -12,7 +13,7 @@
 <br><br>
     <section id="registro">
         <h2>Registro</h2>
-        <form action="procesar.php" method="post">
+        <form action="" method="post">
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required>
 
