--- a/Practica 2/Pages/productos.html
+++ b/Practica 2/Pages/productos.html
@@ -1,14 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DRStyle - Productos</title>
-    <link rel="icon" href="logo3.png" type="img">
+    <link rel="icon" href="../Public/Img/logo3.png" type="image/x-icon">
+    <link rel="stylesheet" href="../Public/Estilos/productos.css">
 </head>
+
 <body>
     <h1>Productos</h1>
-    <table>
+    <p>Explora la colección exclusiva de DRStyle, tu destino para el mejor merchandising de Fórmula 1. Desde camisetas
+        hasta accesorios, cada producto refleja la pasión y la elegancia de la máxima competición automovilística. Vive
+        la emoción de la F1 en cada detalle. ¡Descubre la auténtica esencia de la velocidad con DRStyle!
+    </p>
+    <section id="Productos">
+        <div>
+            <table>
+                <tr>
+                    <td class="Imagen"><img src="../Public/Img/Gorra_redbull_2023.jpg" alt="Gorra RedBull 2023"></td>
+                </tr>
+                <tr>
+                    <td>Gorra RedBull 2023</td>
+                </tr>
+                <tr>
+                    <td class="comprar">45.00$</td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <td class="Imagen"><img src="../Public/Img/Chaqueta_Ferrari_2023.jpg" alt="Chaqueta Ferrari 2023"></td>
+                </tr>
+                <tr>
+                    <td>Chaqueta Ferrari-Santander 2023</td>
+                </tr>
+                <tr>
+                    <td class="comprar">115.00$</td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <td class="Imagen"><img src="../Public/Img/Camisa_AstonMartin_2023.webp" alt="Camisa AstonMartin 2023"></td>
+                </tr>
+                <tr>
+                    <td>Camisa Aston Martin 2023</td>
+                </tr>
+                <tr>
+                    <td class="comprar">65.00$</td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <td class="Imagen"><img src="../Public/Img/Gorra_Mclaren_2023.jpg" alt="Gorra Mclaren 2023"></td>
+                </tr>
+                <tr>
+                    <td>Gorra Mclaren 2023</td>
+                </tr>
+                <tr>
+                    <td class="comprar">45.00$</td>
+                </tr>
+            </table>
+        </div>
+    </section>
+    <br>
+    <h2 class="Proximamente">PROXIMAMENTE MAS PRODUCTOS</h2>
+    
+    <table class="Nostros">
         <tr>
             <td><a href="../index.html" target="_blank">INICIO</a></td>
             <td><a href="carrito.html" target="_blank">CARRITO</a></td>
@@ -17,4 +75,5 @@
         </tr>
     </table>
 </body>
+
 </html>
