--- a/Practica 2/index.html
+++ b/Practica 2/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img src="Logo1.jpg.png" alt="Logo DRStyle">
+        <img src="Public/Img/Logo1.jpg.png" alt="Logo DRStyle">
         <br>
         <h2>"Siente la Velocidad, Viste la Elegancia"</h2>
     </header>
