--- a/Evaluacion1/Pages/menu.html
+++ b/Evaluacion1/Pages/menu.html
@@ -12,9 +12,13 @@
 <body>
     <header>
         <figure>
-            <img src="../Public/Img/Camion_Sirviendo.jpg" alt="">
+            <img src="../Public/Img/Camion_Parqueado.jpg" alt="">
         </figure>
         <h1>FOODTRUCK MEDALLO</h1>
+        <nav>
+            <a href="../index.html" class="boton">Inicio</a>
+            <a href="../Pages/redes.html" class="boton">Redes</a>
+        </nav>
     </header>
     <section id="menu">
         <h2>HECHALE UN VISTAZO AL MENU DE LA MEJOR COMIDA RAPIDA DE ENVIGADO</h2>
@@ -58,16 +62,19 @@
         </div>
     </section>
     <br>
-    <section id="Navegacion">
-        <table>
-            <tr>
-                <td><a href="../index.html">INICIO</a></td>
-                <td><a href="redes.html">REDES</a></td>
-            </tr>
-        </table>
-    </section>
     <footer>
         <h5>Todos los derechos reservados a FOODTRUCK MEDALLO</h5>
+        <div>
+            <a href="#">Volver al Principio</a>
+            <h5>Volver a la pagina Inicial;</h5>
+            <a href="../index.html">Inicio</a>
+            <h5>Ver nuestras Redes;</h5>
+            <a href="Pages/redes.html">Redes</a>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nihil aspernatur non asperiores quia
+                eaque impedit vel quo tempora, perferendis nam, qui repellendus, magnam fugit voluptate ipsum tenetur
+                beatae magni quos sunt deleniti nobis. Sunt dolorem eius ipsum, quasi dignissimos tempora beatae enim
+                qui officia commodi ullam excepturi sseaque doloremque.</p>
+        </div>
     </footer>
 </body>
 
