--- a/Evaluacion1/index.html
+++ b/Evaluacion1/index.html
@@ -15,6 +15,10 @@
             <img src="Public/Img/Camion_Parqueado.jpg" alt="">
         </figure>
         <h1>FOODTRUCK MEDALLO</h1>
+        <nav>
+            <a href="Pages/menu.html" class="boton">Menu</a>
+            <a href="Pages/redes.html" class="boton">Redes</a>
+        </nav>
     </header>
     <section id="Introduccion">
         <h2>LA MEJOR COMIDA RAPIDA DE MEDALLO</h2>
@@ -41,16 +45,19 @@
             de la verdadera esencia gastronómica de Medellín!
         </p>
     </section>
-    <section id="Navegacion">
-        <table>
-            <tr>
-                <td><a href="Pages/menu.html">MENU</a></td>
-                <td><a href="Pages/redes.html">REDES</a></td>
-            </tr>
-        </table>
-    </section>
     <footer>
         <h5>Todos los derechos reservados a FOODTRUCK MEDALLO</h5>
+        <div>
+            <a href="#">Volver al Principio</a>
+            <h5>Nuestras Comidas y Bebidas;</h5>
+            <a href="Pages/menu.html">Menu</a>
+            <h5>Ver nuestras Redes;</h5>
+            <a href="Pages/redes.html">Redes</a>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nihil aspernatur non asperiores quia
+                eaque impedit vel quo tempora, perferendis nam, qui repellendus, magnam fugit voluptate ipsum tenetur
+                beatae magni quos sunt deleniti nobis. Sunt dolorem eius ipsum, quasi dignissimos tempora beatae enim
+                qui officia commodi ullam excepturi sseaque doloremque.</p>
+        </div>
     </footer>
 </body>
 
