--- a/Evaluacion1/Pages/redes.html
+++ b/Evaluacion1/Pages/redes.html
@@ -12,9 +12,13 @@
 <body>
     <header>
         <figure>
-            <img src="../Public/Img/Camion_con_multitud.jpg" alt="">
+            <img src="../Public/Img/Camion_Parqueado.jpg" alt="">
         </figure>
         <h1>FOODTRUCK MEDALLO</h1>
+        <nav>
+            <a href="../index.html" class="boton">Inicio</a>
+            <a href="../Pages/menu.html" class="boton">Menu</a>
+        </nav>
     </header>
     <section id="redes">
         <h2>AQUI PUEDES ENCONTRAR NUESTRAS REDES Y CONTACTOS</h2>
@@ -36,16 +40,19 @@
         </div>
     </section>
     <br>
-    <section id="Navegacion">
-        <table>
-            <tr>
-                <td><a href="menu.html">MENU</a></td>
-                <td><a href="../index.html">INICIO</a></td>
-            </tr>
-        </table>
-    </section>
     <footer>
         <h5>Todos los derechos reservados a FOODTRUCK MEDALLO</h5>
+        <div>
+            <a href="#">Volver al Principio</a>
+            <h5>Volver a la pagina Inicial;</h5>
+            <a href="../index.html">Inicio</a>
+            <h5>Nuestras Comidas y Bebidas;</h5>
+            <a href="Pages/menu.html">Menu</a>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nihil aspernatur non asperiores quia
+                eaque impedit vel quo tempora, perferendis nam, qui repellendus, magnam fugit voluptate ipsum tenetur
+                beatae magni quos sunt deleniti nobis. Sunt dolorem eius ipsum, quasi dignissimos tempora beatae enim
+                qui officia commodi ullam excepturi sseaque doloremque.</p>
+        </div>
     </footer>
 </body>
 </body>
