--- a/clase10/index.html
+++ b/clase10/index.html
@@ -24,7 +24,14 @@
             <a href="">CONTACTOS</a>
         </nav>
     </header>
-
+    <section class="seccion-1">
+        <h1>CONOCENOS</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis nemo commodi minus repudiandae
+            temporibus pariatur beatae rem sint! Accusamus nulla sapiente sed, quae commodi, quod, id autem et odio
+            illum corrupti iusto libero soluta nesciunt sit? Pariatur eius adipisci velit beatae, repellendus fugit illo
+            nesciunt harum earum inventore ipsam totam cumque eum vero illum sunt ipsa quos fuga! Nulla incidunt
+            molestias nesciunt vitae consectetur eaque dolore ea fugit illo sit.</p>
+    </section>
 </body>
 
 </html>
