--- a/Clase 12/index.html
+++ b/Clase 12/index.html
@@ -14,6 +14,8 @@
         <input type="text" name="nombre" placeholder="Sainz">
         <label for="">FECHA</label>
         <input type="datetime-local" name="fecha">
+        <label for="">NUMERO</label>
+        <input type="text" name="numero" id="">
         <input type="submit" value="Subir">
     </form>
     <table>
